--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ make animation for movement
     <meta name="viewport" content="width=device-width">
     <title>2048</title>
     <link rel="shortcut icon" href="title.ico" />
+    <link rel="shortcut icon" href="title.ico" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
